--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
   <title>Пример подключения плеера</title>
   <meta charset="utf-8">
   <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
-
 </head>
 <body>
   <div id="player" style="width: 800px; height: 600px;">
     <div class="js-video-container" style="width: 100%; height: 100%"></div>
-    <button style="border-style: none;"><i class="fa fa-play" aria-hidden="true"></i></button>
+    <button style="border-style: none; cursor: pointer;"><i class="fa fa-play" aria-hidden="true"></i></button>
     
   </div>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
