--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
   <title>Пример подключения плеера</title>
   <meta charset="utf-8">
   <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="main.css">
 </head>
 <body>
   <div id="player" style="width: 800px; height: 600px;">
     <div class="js-video-container" style="width: 100%; height: 100%"></div>
     <div style="background-color: black">
-      <button style="background-color: transparent; border-style: none; cursor: pointer;">
-        <i class="fa fa-play" style=" color: white" aria-hidden="true"></i>
+      <button class="menu_button">
+        <i class="fa fa-play menu_icon" aria-hidden="true"></i>
+      </button>
+      <button class="menu_button">
+        <i class="fa fa-pause menu_icon" aria-hidden="true"></i>
       </button>
     </div>
     
