--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   <div id="player" style="width: 800px; height: 600px;">
     <div class="js-video-container" style="width: 100%; height: 100%"></div>
     <div style="background-color: black">
-      <button class="menu_button">
+      <button class="menu_button js-play-button">
         <i class="fa fa-play menu_icon" aria-hidden="true"></i>
       </button>
-      <button class="menu_button">
+      <button class="menu_button js-pause-button">
         <i class="fa fa-pause menu_icon" aria-hidden="true"></i>
       </button>
     </div>
