--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
-  <div id="player" style="width: 800px; height: 600px;">
-    <div class="js-video-container" style="width: 100%; height: 100%"></div>
-    <div style="background-color: black">
+  <div id="player" class="main_video_frame">
+    <div class="js-video-container video_container"></div>
+    <div class="menu">
       <button class="menu_button js-play-button">
         <i class="fa fa-play menu_icon" aria-hidden="true"></i>
       </button>
