made player flexible

--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html style="height: 100%;">
 <head>
   <title>Пример подключения плеера</title>
   <meta charset="utf-8">
   <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="main.css">
 </head>
-<body>
+<body style="height: 100%;">
   <div id="player" class="main_video_frame">
+    <!-- <div class="js-video-container video_container"></div> -->
     <div class="js-video-container video_container"></div>
     <div class="menu">
       <button class="menu_button js-play-button">
