add volume button

--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
       <button class="menu_button js-pause-button">
         <i class="fa fa-pause menu_icon" aria-hidden="true"></i>
       </button>
+      <button class="menu_button js-volume-button">
+        <i class="fa fa-volume-off menu_icon" aria-hidden="true"></i>
+      </button>
+      <button class="menu_button js-mute-button">
+        <i class="fa fa-volume-up menu_icon" aria-hidden="true"></i>
+      </button>
     </div>
     
   </div>
