--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
       <button class="menu_button js-mute-button">
         <i class="fa fa-volume-up menu_icon" aria-hidden="true"></i>
       </button>
+      <div style="flex-grow: 1;"></div>
+      <button class="menu_button js-fullscreen-button">
+        <i class="fa fa-expand menu_icon" aria-hidden="true"></i>
+      </button>
     </div>
     
   </div>
