--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html style="height: 100%;">
 <head>
-  <title>Пример подключения плеера</title>
+  <title>Заготовка видеоплеера</title>
   <meta charset="utf-8">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="main.css">
 </head>
 <body style="height: 100%;">
   <div id="player" class="main_video_frame">
-    <!-- <div class="js-video-container video_container"></div> -->
     <div class="js-video-container video_container"></div>
     <div class="menu">
       <button class="menu_button js-play-button">
