--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
       <button class="vp_menu_button js-mute-button">
         <i class="fa fa-volume-up" aria-hidden="true"></i>
       </button>
+      
+      <div style="color: white;">
+        <span class="js-current-time"></span>
+        —
+        <span class="js-duration"></span>
+      </div>
       <div class="vp_empty_button"></div>
       <button class="vp_menu_button js-fullscreen-button">
         <i class="fa fa-expand" aria-hidden="true"></i>
