--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="main.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> 
 </head>
 <body>
   <div id="player" class="vp_main_vf">
@@ -24,7 +27,7 @@
         <i class="fa fa-volume-up" aria-hidden="true"></i>
       </button>
       
-      <div style="color: white;">
+      <div class="vp_menu_duration">
         <span class="js-current-time"></span>
         —
         <span class="js-duration"></span>
