set up progress style

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         <span class="js-current-time"></span>
       </div>
       
-      <div class="js-progress vp_empty_button" style="background-color: grey;">
-        <div class="js-progress-slider" style="background-color: red;">progress</div>
+      <div class="js-progress vp_pb">
+        <div class="js-progress-slider vp_pb_p"></div>
       </div>
       
       <div class="vp_menu_duration">
