--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
       </div>
       
       <div class="js-progress vp_pb">
-        <div class="js-progress-slider vp_pb_p"></div>
+        <div class="js-progress-slider vp_pb_p">
+          <span class="vp_pb_slider"></span>
+        </div>
       </div>
       
       <div class="vp_menu_duration">
