delete extra clas

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <i class="fa fa-volume-up" aria-hidden="true"></i>
       </button>
       
-      <div class="vp_menu_duration vp_time">
+      <div class="vp_menu_duration">
         <span class="js-current-time"></span>
       </div>
       
